fixed some bugs; added dark mode

--- a/style.css
+++ b/style.css
@@ -6,17 +6,34 @@ body {
     background-color: hsl(0, 0%, 95%);
 }
 
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+
+.header button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.header img {
+    height: 2.8rem;
+}
+
+.title {
+    font-size: 2.8rem;
+    width: 43rem;
+    font-weight: bold;
+}
+
 .container {
     display: grid;
     grid-template-columns: 50% 50%;
     gap: 1em;
     margin: 1.2rem;
-}
-
-.title {
-    font-size: 2.8rem;
-    font-weight: bold;
-    margin-top: 2rem;
 }
 
 .name {
@@ -107,6 +124,14 @@ body {
     right: 0;
 }
 
+.darkMode {
+    background-color: hsl(0, 0%, 8%);
+}
+
+.darkMode h1, .darkMode h2, .darkMode p {
+    color: hsl(0, 0%, 86%);
+}
+
 @keyframes fade {
     from {opacity: .5}
     to {opacity: 1}
@@ -118,8 +143,11 @@ body {
         flex-direction: column;
     }
 
+    .header img {
+        height: 2rem;
+    }
+
     .title {
-        margin-top: 1.5rem;
         font-size: 2rem;
     }
 
